service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fil7er-output-generator-svc
  namespace: string-output-namespace
spec:
  type: NodePort
  selector:
    app: fil7er-output-generator
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3009
      nodePort: 30012
