ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fil7er-output-generator-ingress
  namespace: my-namespace
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fil7er-output-generator-svc
            port:
              number: 3003
